@@ -1,4 +1,3 @@
-import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.Socket;
@@ -6,8 +5,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.zip.GZIPOutputStream;
 
 public class Handler implements Runnable{
     private final Socket clientSocket;
@@ -29,77 +26,86 @@ public class Handler implements Runnable{
             ResponseBuilder responseBuilder = new ResponseBuilder();
             Response response;
 
-            boolean usesGzip = request.getHeader("accept-encoding").contains("gzip");
+            while (true){
+                boolean usesGzip = request.getHeader("accept-encoding").contains("gzip");
 
-            if (request.path().startsWith("/echo")) {
-                if(usesGzip){
+                if (request.path().startsWith("/echo")) {
+                    if (usesGzip) {
 
-                    byte[] echoText = parser.gzipCompress(request.path().substring("/echo/".length()));
+                        byte[] echoText = parser.gzipCompress(request.path().substring("/echo/".length()));
 
+                        response = responseBuilder.withStatus("200", "OK")
+                                .withHeaders("Content-Encoding", "gzip")
+                                .withHeaders("Content-Type", "text/plain")
+                                .withHeaders("Content-Length", String.valueOf(echoText.length))
+                                .buildResponse();
+                        out.write(response.toString().getBytes(StandardCharsets.UTF_8));
+                        out.write(echoText);
+                        out.flush();
+                    } else {
+                        response = responseBuilder.withStatus("200", "OK")
+                                .withHeaders("Content-Type", "text/plain")
+                                .withHeaders("Content-Length", String.valueOf(request.path().split("/")[2].length()))
+                                .withBody(request.path().split("/")[2])
+                                .buildResponse();
+                    }
+
+                } else if (request.path().startsWith("/user-agent")) {
+                    String userAgentValue = request.getHeader("user-agent").trim();
                     response = responseBuilder.withStatus("200", "OK")
-                            .withHeaders("Content-Encoding", "gzip")
                             .withHeaders("Content-Type", "text/plain")
-                            .withHeaders("Content-Length", String.valueOf(echoText.length))
+                            .withHeaders("Content-Length", String.valueOf(userAgentValue.getBytes(StandardCharsets.UTF_8).length))
+                            .withBody(userAgentValue)
                             .buildResponse();
-                    out.write(response.toString().getBytes(StandardCharsets.UTF_8));
-                    out.write(echoText);
-                    out.flush();
-                }else {
+                } else if (request.path().equals("/")) {
                     response = responseBuilder.withStatus("200", "OK")
-                            .withHeaders("Content-Type", "text/plain")
-                            .withHeaders("Content-Length", String.valueOf(request.path().split("/")[2].length()))
-                            .withBody(request.path().split("/")[2])
                             .buildResponse();
-                }
+                } else if (request.path().startsWith("/files") && request.httpMethod().equals("GET")) {
+                    String fileName = request.path().substring("/files/".length());
+                    Path filePath = Paths.get(baseDirectory, fileName);
 
-            } else if (request.path().startsWith("/user-agent")) {
-                String userAgentValue = request.getHeader("user-agent").trim();
-                response = responseBuilder.withStatus("200", "OK")
-                        .withHeaders("Content-Type", "text/plain")
-                        .withHeaders("Content-Length", String.valueOf(userAgentValue.getBytes(StandardCharsets.UTF_8).length))
-                        .withBody(userAgentValue)
-                        .buildResponse();
-            } else if (request.path().equals("/")) {
-                response = responseBuilder.withStatus("200", "OK")
-                        .buildResponse();
-            } else if (request.path().startsWith("/files") && request.httpMethod().equals("GET")) {
-                String fileName = request.path().substring("/files/".length());
-                Path filePath = Paths.get(baseDirectory, fileName);
+                    if (Files.exists(filePath) && Files.isRegularFile(filePath)) {
+                        byte[] fileContent = Files.readAllBytes(filePath);
+                        response = responseBuilder.withStatus("200", "OK")
+                                .withHeaders("Content-Type", "application/octet-stream")
+                                .withHeaders("Content-Length", String.valueOf(fileContent.length))
+                                .withBody(new String(fileContent, StandardCharsets.UTF_8))
+                                .buildResponse();
+                    } else {
+                        response = responseBuilder.withStatus("404", "Not Found")
+                                .buildResponse();
+                    }
+                } else if (request.httpMethod().equals("POST") && request.path().startsWith("/files")) {
+                    String fileName = request.path().substring("/files/".length());
+                    Path filePath = Paths.get(baseDirectory, fileName);
 
-                if (Files.exists(filePath) && Files.isRegularFile(filePath)) {
-                    byte[] fileContent = Files.readAllBytes(filePath);
-                    response = responseBuilder.withStatus("200", "OK")
-                            .withHeaders("Content-Type", "application/octet-stream")
-                            .withHeaders("Content-Length", String.valueOf(fileContent.length))
-                            .withBody(new String(fileContent, StandardCharsets.UTF_8))
+                    Files.createDirectories(Paths.get(baseDirectory));
+                    Files.writeString(filePath, request.body());
+                    response = responseBuilder.withStatus("201", "Created")
                             .buildResponse();
+
                 } else {
                     response = responseBuilder.withStatus("404", "Not Found")
                             .buildResponse();
                 }
-            } else if (request.httpMethod().equals("POST") && request.path().startsWith("/files")) {
-                String fileName = request.path().substring("/files/".length());
-                Path filePath = Paths.get(baseDirectory, fileName);
 
-                Files.createDirectories(Paths.get(baseDirectory));
-                Files.writeString(filePath, request.body());
-                response = responseBuilder.withStatus("201", "Created")
-                        .buildResponse();
+                if (usesGzip && !response.toString().contains("Content-Encoding")) {
+                    response = responseBuilder.withHeaders("Content-Encoding", "gzip")
+                            .buildResponse();
 
-            } else {
-                response = responseBuilder.withStatus("404", "Not Found")
-                        .buildResponse();
+                }
+
+                assert response != null;
+                out.write(response.toString().getBytes());
+                out.flush();
+
+                String connection = request.getHeader("connection");
+                if (connection != null && connection.equals("close")) {
+                    System.out.println(response);
+                    break;
+                }
             }
-
-            if (usesGzip && !response.toString().contains("Content-Encoding")) {
-                response= responseBuilder.withHeaders("Content-Encoding", "gzip")
-                        .buildResponse();
-
-            }
-
-            assert response != null;
-            out.write(response.toString().getBytes());
-            out.flush();
+            clientSocket.close();
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
